Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: val-frontend-svc
  namespace: val
spec:
  selector:
    app: val-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
